Added coverage flags for linker

--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,10 @@
-CFLAGS=-Wall -g -fprofile-arcs -ftest-coverage
+CC=gcc
+CFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
+LFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
 
 all: turing
 
 turing: errors.o turingparser.o
 
 clean:
-	rm *.o turing
+	rm *.o *.gcno *.gcda turing
