--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,12 @@
 CC=gcc
-CFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
-LFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
+CFLAGS=-Wall
+LFLAGS=-Wall
+
+default: all
+
+coverage: CFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
+coverage: LFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
+coverage: all
 
 all: turing
 
