Updated test running

--- a/src/makefile
+++ b/src/makefile
@@ -4,8 +4,8 @@ LFLAGS=-Wall
 
 default: all
 
-coverage: CFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
-coverage: LFLAGS=-Wall -O0 -g -fprofile-arcs -ftest-coverage
+coverage: CFLAGS=-Wall -O0 -g --coverage
+# coverage: LFLAGS=-Wall -O0 -g --coverage
 coverage: all
 
 all: turing
